--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </span>
         </div>
         <ul>
-            <li><a href="#" target="_blank">
+            <li><a href="https://github.com/Ivozeraa/linkdev" target="_blank">
                 Veja este projeto
             </a></li>
         </ul>
@@ -34,23 +34,23 @@
             </a></li>
         </ul>
         <ul>
-            <li><a href="#" target="_blank">
+            <li><a href="https://github.com/Ivozeraa" target="_blank">
                 Github
             </a></li>
         </ul>
         <ul>
-            <li><a href="#" target="_blank">
+            <li><a href="https://epanazelia.vercel.app/" target="_blank">
                 Site EEEP(Em Teste)
             </a></li>
         </ul>
         <div id="social-icons">
-            <a href="#" target="_blank">
+            <a href="https://github.com/Ivozeraa" target="_blank">
                 <ion-icon name="logo-github"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.instagram.com/oivomelo/" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
             </a>
-            <a href="#" target="_blank">
+            <a href="https://www.linkedin.com/in/jos%C3%A9-i-688009329/" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
             </a>
         </div>
